--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to Daniel's Web Application!</h1>
-<p>Sign-up <%= link_to "here", "#" %>.</p>
+<p>Click here to <%= link_to "Sign-up", "#", class: "btn btn-primary" %>.</p>
 
