Customize bootstrap variables

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,12 @@
 /* flatuicolors.com */
+/* http://www.fonts.com/font/linotype/avenir?QueryFontType=Web&src=GoogleWebFonts#product_top */
 $navbar-default-bg: #676B68;
 $navbar-default-link-color: #FFFFFF;
 $body-bg: #F0F0EF;
 $btn-primary-bg: #FF4200;
+
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
