--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,7 +2,7 @@
 	<div class="panel-heading">
 	<h2>Forgot your password?</h2>
 	</div>
-	<div class="panel-body"
+	<div class="panel-body">
 		<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
 		  <%= devise_error_messages! %>
 
